tests/variable/duplicate_local.rev.rev
{
    var a
    var a // error: a variable with the same name as already been declared in this local scope
}